--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@vanilla-extract/css": "^1.14.0",
-    "next": "14.0.3",
-    "react": "^18",
-    "react-dom": "^18",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vanilla-extract/css": "^1.14.0",
+    "@vanilla-extract/next-plugin": "^2.3.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "next": "14.0.3",
+    "react": "^18",
+    "react-dom": "^18",
     "typescript": "^5"
   },
   "engines": {
