--- a/package.json
+++ b/package.json
@@ -17,14 +17,22 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
     "@vanilla-extract/css": "^1.14.0",
     "@vanilla-extract/next-plugin": "^2.3.2",
-    "eslint": "^8",
+    "eslint": "^8.53.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-next": "14.0.3",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-perfectionist": "^2.4.2",
+    "eslint-plugin-prettier": "^5.0.1",
     "next": "14.0.3",
+    "prettier": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "typescript": "^5",
+    "typescript": "^5.2.2",
     "zod": "^3.22.4"
   },
   "engines": {
