--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prettier": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "serialize-error": "^11.0.3",
     "typescript": "^5.2.2",
     "zod": "^3.22.4"
   },
