--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@typescript-eslint/parser": "^6.12.0",
     "@vanilla-extract/css": "^1.14.0",
     "@vanilla-extract/next-plugin": "^2.3.2",
+    "animate.css": "^4.1.1",
+    "clsx": "^2.0.0",
     "eslint": "^8.53.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
