--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^18",
     "react-dom": "^18",
     "serialize-error": "^11.0.3",
+    "type-fest": "^4.9.0",
     "typescript": "^5.2.2",
     "zod": "^3.22.4"
   },
