--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:types": "tsc --noEmit --project './tsconfig.json'"
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
