--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-perfectionist": "^2.4.2",
     "eslint-plugin-prettier": "^5.0.1",
+    "modern-normalize": "^2.0.0",
     "next": "14.0.3",
     "prettier": "^3.1.0",
     "react": "^18",
