--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test:types": "tsc --noEmit --project './tsconfig.json'"
+    "test:types": "tsc --noEmit --project './tsconfig.json'",
+    "test:components": "playwright test -c playwright-ct.config.ts",
+    "install-playwright": "pnpm exec playwright install"
   },
   "dependencies": {
+    "@playwright/experimental-ct-react": "^1.41.1",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-table": "^8.10.7",
     "@tanstack/zod-form-adapter": "^0.9.0",
@@ -31,10 +34,10 @@
     "eslint-plugin-perfectionist": "^2.5.0",
     "eslint-plugin-prettier": "^5.1.3",
     "modern-normalize": "^2.0.0",
-    "next": "14.0.3",
-    "prettier": "^3.1.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "14.1.0",
+    "prettier": "^3.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "serialize-error": "^11.0.3",
     "type-fest": "^4.9.0",
     "typescript": "^5.3.3",
