--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "test:types": "tsc --noEmit --project './tsconfig.json'",
     "test:components": "playwright test -c playwright-ct.config.ts",
+    "test:components:ui": "playwright test -c playwright-ct.config.ts --ui",
     "install-playwright": "pnpm exec playwright install"
   },
   "dependencies": {
@@ -24,6 +25,8 @@
     "@typescript-eslint/parser": "^6.19.0",
     "@vanilla-extract/css": "^1.14.0",
     "@vanilla-extract/next-plugin": "^2.3.3",
+    "@vanilla-extract/vite-plugin": "^3.9.4",
+    "@vitejs/plugin-react": "^4.2.1",
     "animate.css": "^4.1.1",
     "clsx": "^2.0.0",
     "eslint": "^8.56.0",
@@ -33,6 +36,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-perfectionist": "^2.5.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "modern-normalize": "^2.0.0",
     "next": "14.1.0",
     "prettier": "^3.2.4",
