--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "serialize-error": "^11.0.3",
     "type-fest": "^4.9.0",
     "typescript": "^5.3.3",
+    "vite-plugin-svgr": "^4.2.0",
     "zod": "^3.22.4"
   },
   "engines": {
