--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "serialize-error": "^11.0.3",
+    "tinyspy": "^2.2.0",
     "type-fest": "^4.9.0",
     "typescript": "^5.3.3",
     "vite-plugin-svgr": "^4.2.0",
