--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "install-playwright": "pnpm exec playwright install"
   },
   "dependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@playwright/experimental-ct-react": "^1.41.1",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-table": "^8.10.7",
@@ -42,6 +43,7 @@
     "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.1",
     "serialize-error": "^11.0.3",
     "type-fest": "^4.9.0",
     "typescript": "^5.3.3",
