--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
     "serialize-error": "^11.0.3",
     "type-fest": "^4.9.0",
     "typescript": "^5.3.3",
