Got form running again

--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "install-playwright": "pnpm exec playwright install"
   },
   "dependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@playwright/experimental-ct-react": "^1.41.1",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-table": "^8.10.7",
     "@tanstack/zod-form-adapter": "^0.9.0",
     "@total-typescript/ts-reset": "^0.5.1",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.9.1",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@vanilla-extract/css": "^1.14.0",
@@ -42,7 +43,7 @@
     "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.2",
+    "react-hook-form": "^7.53.0",
     "serialize-error": "^11.0.3",
     "type-fest": "^4.9.0",
     "typescript": "^5.3.3",
