--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hookform/devtools": "^4.3.1",
+    "@hookform/resolvers": "^3.9.0",
     "@playwright/experimental-ct-react": "^1.41.1",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-table": "^8.10.7",
